# Multilingual-RAG-System

./: README.md  main.py  pyproject.toml  requirements.txt
app/: config.py  main.py
app/data/: HSC26-Bangla1st-Paper.txt
app/routes/v1/endpoints/: ask.py
app/services/: english_query_service.py
app/utils/: data_loader.py  rag_chain.py  vector_store.py
