[project]
name = "multilingual-rag-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "langchain>=0.3.27",
    "langchain-cohere>=0.4.4",
    "langchain-community>=0.3.27",
    "langchain-google-genai>=2.1.8",
    "langchain-pinecone>=0.2.11",
    "pdf2image>=1.17.0",
    "pillow>=11.3.0",
    "pydantic-settings>=2.10.1",
    "pytesseract>=0.3.13",
    "uvicorn>=0.35.0",
]
